--- a/openshift/run-ha.yaml
+++ b/openshift/run-ha.yaml
@@ -374,10 +374,51 @@ objects:
             mountPath: /etc/apache2/sites-enabled
           - name: etcconf
             mountPath: /etc/lemonldap-ng
+        - args:
+          - /job-lemonldap.sh
+          command:
+          - dumb-init
+          env:
+          - name: CLEANUP_PERIOD
+            value: "21600"
+          - name: OPENLDAP_BASE
+            value: "${WSWEET_BASE_SUFFIX}"
+          - name: OPENLDAP_BIND_DN_PREFIX
+            value: cn=lemonldap,ou=services
+          - name: OPENLDAP_BIND_PW
+            valueFrom:
+              secretKeyRef:
+                key: lemonldap-password
+                name: openldap-${FRONTNAME}
+          - name: OPENLDAP_CONF_DN_PREFIX
+            value: ou=lemonldap,ou=config
+          - name: OPENLDAP_DOMAIN
+            value: "${WSWEET_ROOT_DOMAIN}"
+          - name: OPENLDAP_HOST
+            value: openldap-${FRONTNAME}
+          - name: OPENLDAP_HTTP_PORT
+            value: "8080"
+          - name: OPENLDAP_PORT
+            value: "1389"
+          - name: OPENLDAP_PROTO
+            value: ldap
+          name: job
+          ports:
+          - containerPort: 8080
+            protocol: TCP
+          resources:
+            limits:
+              cpu: 50m
+              memory: 64Mi
+          volumeMounts:
+          - name: jobconf
+            mountPath: /etc/lemonldap-ng
         restartPolicy: Always
         volumes:
         - emptyDir: {}
           name: etcconf
+        - emptyDir: {}
+          name: jobconf
         - emptyDir: {}
           name: apachesites
     triggers:
@@ -386,6 +427,7 @@ objects:
         automatic: true
         containerNames:
         - lemon
+        - job
         from:
           kind: ImageStreamTag
           name: lemon-${LEMON_IMAGE_FRONTNAME}:${LEMON_IMAGE_TAG}
