--- a/config/handler.conf
+++ b/config/handler.conf
@@ -1,5 +1,5 @@
 PerlOptions +GlobalRequest
-PerlModule Lemonldap::NG::Handler
+PerlModule Lemonldap::NG::Handler::ApacheMP2
 ErrorDocument 403 http://auth.LDAP_DOMAIN:HTTP_PUB_PORT/?lmError=403
 ErrorDocument 404 http://auth.LDAP_DOMAIN:HTTP_PUB_PORT/?lmError=404
 ErrorDocument 500 http://auth.LDAP_DOMAIN:HTTP_PUB_PORT/?lmError=500
@@ -19,6 +19,6 @@ ErrorDocument 503 http://auth.LDAP_DOMAIN:HTTP_PUB_PORT/?lmError=503
 	    Allow from 127.0.0.0/8 ::1
 	</IfVersion>
 	SetHandler perl-script
-	PerlResponseHandler Lemonldap::NG::Handler->reload
+	PerlResponseHandler Lemonldap::NG::Handler::ApacheMP2->reload
     </Location>
 </VirtualHost>
