--- a/config/lemonldap-ng.ini
+++ b/config/lemonldap-ng.ini
@@ -1,4 +1,6 @@
 [all]
+logLevel = DEBUG
+checkTime = 5
 [configuration]
 type                 = LDAP
 ldapServer           = LDAP_PROTO://LDAP_HOST:LDAP_PORT
@@ -9,6 +11,9 @@ ldapObjectClass      = applicationProcess
 ldapAttributeId      = cn
 ldapAttributeContent = description
 [portal]
+staticPrefix = /static
+templateDir  = /usr/share/lemonldap-ng/portal/templates
+languages    = fr, en
 [handler]
 status             = 0
 useRedirectOnError = 1
@@ -16,6 +21,6 @@ useRedirectOnError = 1
 protection     = manager
 logLevel       = warn
 staticPrefix   = /static
-templateDir    = /usr/share/lemonldap-ng/manager/templates
+templateDir    = /usr/share/lemonldap-ng/manager/htdocs/templates
 languages      = fr, en
-enabledModules = conf, sessions, notifications
+enabledModules = conf, sessions, notifications, 2ndFA
