--- a/config/manager.conf
+++ b/config/manager.conf
@@ -4,16 +4,15 @@
     LogLevel LOG_LEVEL
     Include SSL_TOGGLE_INCLUDE
     RewriteEngine on
-    RewriteRule "^/$" "/psgi/manager-server.fcgi" [PT]
-    RewriteCond "%{REQUEST_FILENAME}" "!^/(?:static|doc|fr-doc|lib|javascript|favicon).*"
-    RewriteRule "^/(.+)$" "/psgi/manager-server.fcgi/$1" [PT]
-    Alias /psgi/ /usr/share/lemonldap-ng/manager/psgi//
+    RewriteCond "%{REQUEST_FILENAME}" "!^/(?:static|doc|lib|javascript|favicon).*"
+    RewriteRule "^/(.+)$" "/manager.fcgi/$1" [PT]
     FcgidMaxRequestLen 2000000
-    <Directory /usr/share/lemonldap-ng/manager/psgi/>
+    <Files *.fcgi>
 	SetHandler fcgid-script
 	Options +ExecCGI
-    </Directory>
-    DocumentRoot /usr/share/lemonldap-ng/manager/
+	header unset Lm-Remote-User
+    </Files>
+    DocumentRoot /usr/share/lemonldap-ng/manager/htdocs/
     <Location />
 	<IfVersion >= 2.3>
 	    Require all granted
@@ -35,8 +34,8 @@
 	    Header append Vary User-Agent env=!dont-vary
 	</IfModule>
     </Location>
-    Alias /static/ /usr/share/lemonldap-ng/manager/static//
-    <Directory /usr/share/lemonldap-ng/manager/static/>
+    Alias /static/ /usr/share/lemonldap-ng/manager/htdocs/static/
+    <Directory /usr/share/lemonldap-ng/manager/htdocs/static/>
 	<IfVersion >= 2.3>
 	    Require all granted
 	</IfVersion>
@@ -57,19 +56,6 @@
 	    Allow from all
 	</IfVersion>
 	ErrorDocument 404 /notfound.html
-	Options +FollowSymLinks
-	DirectoryIndex index.html start.html
-    </Directory>
-    Alias /fr-doc/ /usr/share/doc/lemonldap-ng-fr-doc/
-    <Directory /usr/share/doc/lemonldap-ng-fr-doc/>
-	<IfVersion >= 2.3>
-	    Require all granted
-	</IfVersion>
-	<IfVersion < 2.3>
-	    Order Deny,Allow
-	    Allow from all
-	</IfVersion>
-	ErrorDocument 404 /notfoundfr.html
 	Options +FollowSymLinks
 	DirectoryIndex index.html start.html
     </Directory>
