--- a/config/portal.conf
+++ b/config/portal.conf
@@ -3,8 +3,8 @@
     CustomLog /dev/stdout modremoteip
     Include SSL_TOGGLE_INCLUDE
     LogLevel LOG_LEVEL
-    DocumentRoot /var/lib/lemonldap-ng/portal/
-    <Directory /var/lib/lemonldap-ng/portal/>
+    DocumentRoot /usr/share/lemonldap-ng/portal/htdocs/
+    <Directory /usr/share/lemonldap-ng/portal/htdocs/>
 	<IfVersion >= 2.3>
 	    Require all granted
 	</IfVersion>
@@ -14,15 +14,35 @@
 	</IfVersion>
 	Options +ExecCGI +FollowSymLinks
     </Directory>
-    <Files *.pl>
-	SetHandler perl-script
-	PerlResponseHandler ModPerl::Registry
-	CGIPassAuth on
+    RewriteEngine On
+    RewriteCond "%{REQUEST_FILENAME}" "!^/(?:(?:static|javascript|favicon).*|.*\.fcgi)$"
+    RewriteRule "^/(.+)$" "/index.fcgi/$1" [PT]
+    <Files *.fcgi>
+	SetHandler fcgid-script
+	Options +ExecCGI
+	header unset Lm-Remote-User
     </Files>
+    Alias /static/ /usr/share/lemonldap-ng/portal/htdocs/static/
+    <Directory /usr/share/lemonldap-ng/portal/htdocs/static/>
+	<IfVersion >= 2.3>
+	    Require all granted
+	</IfVersion>
+	<IfVersion < 2.3>
+	    Order Deny,Allow
+	    Allow from all
+	</IfVersion>
+	Options +FollowSymLinks
+    </Directory>
+    <Location /static/>
+	<IfModule mod_expires.c>
+	    ExpiresActive On
+	    ExpiresDefault "access plus 1 month"
+	</IfModule>
+    </Location>
     <IfModule mod_dir.c>
-	DirectoryIndex index.pl index.html
+	DirectoryIndex index.fcgi index.html
     </IfModule>
-    <Location /index.pl/adminSessions>
+    <Location /index.fcgi/adminSessions>
 	<IfVersion >= 2.3>
 	    Require all granted
 	</IfVersion>
@@ -31,7 +51,7 @@
 	    Allow from all
 	</IfVersion>
     </Location>
-    <Location /index.pl/sessions>
+    <Location /index.fcgi/sessions>
 	<IfVersion >= 2.3>
 	    Require all granted
 	</IfVersion>
@@ -40,7 +60,7 @@
 	    Allow from all
 	</IfVersion>
     </Location>
-    <Location /index.pl/config>
+    <Location /index.fcgi/config>
 	<IfVersion >= 2.3>
 	    Require all granted
 	</IfVersion>
@@ -49,7 +69,7 @@
 	    Allow from all
 	</IfVersion>
     </Location>
-    <Location /index.pl/notification>
+    <Location /index.fcgi/notification>
 	<IfVersion >= 2.3>
 	    Require all granted
 	</IfVersion>
@@ -58,34 +78,6 @@
 	    Allow from all
 	</IfVersion>
     </Location>
-    <IfModule mod_rewrite.c>
-	RewriteEngine On
-	RewriteRule ^/saml/metadata /metadata.pl
-	RewriteRule ^/saml/.* /index.pl
-    </IfModule>
-    <IfModule mod_rewrite.c>
-	RewriteEngine On
-	RewriteRule ^/cas/.* /index.pl
-    </IfModule>
-    <IfModule mod_rewrite.c>
-	RewriteEngine On
-	RewriteRule ^/openidserver/.* /index.pl
-    </IfModule>
-    <IfModule mod_rewrite.c>
-	RewriteEngine On
-	#RewriteCond %{HTTP:Authorization} .
-	#RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-	RewriteRule ^/oauth2/.* /index.pl
-	RewriteRule ^/.well-known/openid-configuration$ /openid-configuration.pl
-    </IfModule>
-    <IfModule mod_rewrite.c>
-	RewriteEngine On
-	RewriteRule ^/get/.* /index.pl
-    </IfModule>
-    <IfModule mod_rewrite.c>
-	RewriteEngine On
-	RewriteRule ^/public* /public.pl
-    </IfModule>
     <Location />
 	<IfModule mod_deflate.c>
 	    AddOutputFilterByType DEFLATE text/html text/plain text/xml text/javascript text/css
@@ -99,12 +91,4 @@
 	    Header append Vary User-Agent env=!dont-vary
 	</IfModule>
     </Location>
-    <Location /skins/>
-	<IfModule mod_expires.c>
-	    ExpiresActive On
-	    ExpiresDefault "access plus 1 month"
-	</IfModule>
-    </Location>
 </VirtualHost>
-<Perl>
-</Perl>
