--- a/openshift/ci.yaml
+++ b/openshift/ci.yaml
@@ -37,13 +37,13 @@ objects:
               }
               options { timeout(time: 95, unit: 'MINUTES') }
               parameters {
-                  string(defaultValue: 'master', description: 'Apache Docker Image Tag', name: 'apacheTag')
+                  string(defaultValue: 'buster', description: 'Apache Docker Image Tag', name: 'apacheTag')
                   string(defaultValue: 'secr3t', description: 'OpenLDAP Demo Password', name: 'demoPassword')
                   string(defaultValue: '3', description: 'Max Retry', name: 'jobMaxRetry')
                   string(defaultValue: '1', description: 'Retry Count', name: 'jobRetryCount')
-                  string(defaultValue: 'master', description: 'OpenLDAP Docker Image Tag', name: 'ldapTag')
-                  string(defaultValue: 'master', description: 'LemonLDAP-NG Docker Image - Source Git Branch', name: 'lemonldapBranch')
-                  string(defaultValue: 'master', description: 'LemonLDAP-NG Docker Image - Source Git Hash', name: 'lemonldapHash')
+                  string(defaultValue: 'llng2', description: 'OpenLDAP Docker Image Tag', name: 'ldapTag')
+                  string(defaultValue: 'llng2', description: 'LemonLDAP-NG Docker Image - Source Git Branch', name: 'lemonldapBranch')
+                  string(defaultValue: 'llng2', description: 'LemonLDAP-NG Docker Image - Source Git Hash', name: 'lemonldapHash')
                   string(defaultValue: '${GIT_SOURCE_HOST}/Wsweet/docker-lemonldap.git', description: 'LemonLDAP-NG Docker Image - Source Git Repository', name: 'lemonldapRepo')
                   string(defaultValue: '${OPENSHIFT_ROUTED_DOMAIN}', description: 'CI Router Root Domain', name: 'rootDomain')
               }
