--- a/openshift/run-persistent.yaml
+++ b/openshift/run-persistent.yaml
@@ -549,7 +549,7 @@ parameters:
   description: The ImageStreamTag we should pull images from
   displayName: Tag
   required: true
-  value: master
+  value: llng2
 - name: LEMON_MEMORY_LIMIT
   description: Maximum amount of memory a Lemon container can use
   displayName: Lemon Memory Limit
@@ -579,7 +579,7 @@ parameters:
   description: OpenLDAP Image Tag
   displayName: OpenLDAP ImageStream Tag
   required: true
-  value: openldap-wsweet:master
+  value: openldap-wsweet:llng2
 - name: OPENLDAP_MEMORY_LIMIT
   description: Maximum amount of memory an OpenLDAP container can use
   displayName: OpenLDAP Memory Limit
